# SMS-Pralapin-Backend

./: .env.example  .gitignore  Dockerfile  README.md  Untitled  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  rbac.py  seed.py
app/api/: activities.py  attendance.py  auth.py  billing.py  branches.py  cctv.py  dashboard.py  deps.py  feed.py  gallery.py  holidays.py  mobile.py  roles.py  settings.py  staff.py  students.py  users.py
app/models/: __init__.py  academic_year.py  activity.py  attendance.py  billing.py  branch.py  feed.py  gallery.py  holiday.py  role.py  school_class.py  settings.py  student.py  user.py
app/services/: __init__.py  academic_year.py  announcements.py  cctv.py  fcm.py  receipt.py  roles.py  s3.py
